# DroneSwarmLite

./: .gitignore  CMakeLists.txt  LeadershipManager.cpp  Makefile  PositioningSystems.cpp  SwarmTypes.cpp
Config/: swarm_config.yaml
firmware/drone_firmware/: platformio.ini
firmware/drone_firmware/include/: AerialUWBManager_ESP32.h  HardwareConfig.h  PairingCrypto.h  SwarmPairing.h  UWBIntegration.h  UWBManager_ESP32.h
firmware/drone_firmware/src/: AerialUWBManager_ESP32.cpp  PairingCrypto.cpp  SwarmPairing.cpp  UWBIntegration.cpp  UWBManager_ESP32.cpp  main.cpp
include/: AerialCoordinateSystem.h  AerialUWBManager.h  AutonomousDroneAgent.h  CommunicationManager.h  ConfigHandlers.h  ConfigManager.h  ConfigWatcher.h  CryptoManager.h  DistributedPositioning.h  Drone.h  FlightController.h  FormationController.h  HighSpeedRanging.h  LoRaSystem.h  MeshProtocol.h  PowerManager.h  SafetyManager.h  SwarmManager.h  SwarmSystem.h  SwarmTypes.h  UWBCryptoSync.h  UWBManager.h  UWBUtilities.h  VideoTransmitter.h
src/: AerialCoordinateSystem.cpp  AerialUWBManager.cpp  AutonomousDroneAgent.cpp  CommunicationManager.cpp  CommunicationSystem.cpp  ConfigManager.cpp  ConfigWatcher.cpp  CryptoManager.cpp  DistributedPositioning.cpp  HighSpeedRanging.cpp  LoRaSystem.cpp  MeshProtocol.cpp  UWBCryptoSync.cpp  UWBManager.cpp  main.cpp
